Fixed some controller bugs, made multi-user ready
