# storage/api-docs/api-docs.yaml
@@ -34,7 +34,7 @@ paths:
       tags:
         - List
       summary: 'Creates a new shopping list for this user'
-      operationId: createLists
+      operationId: createList
       parameters:
         -
           name: listname
@@ -109,7 +109,7 @@ paths:
       tags:
         - List
       summary: 'Creates a new shopping list entry on the given shopping list for this user'
-      operationId: createEntry
+      operationId: createListEntry
       parameters:
         -
           name: idList
@@ -141,12 +141,12 @@ paths:
       security:
         -
           passport: []
-  '/entry/{idList}':
+  '/entry/{id}':
     delete:
       tags:
         - List
       summary: 'Deletes users shopping list entry with the given ID, regardless on wich list it is. It must be owned by the user, tho.'
-      operationId: deleteList
+      operationId: deleteListEntry
       parameters:
         -
           name: $id
@@ -169,7 +169,7 @@ paths:
   /login:
     post:
       tags:
-        - Auth
+        - 'Simple Auth'
       summary: 'Logs user in and creates new auth token'
       operationId: login
       parameters:
@@ -195,7 +195,7 @@ paths:
   /register:
     post:
       tags:
-        - Auth
+        - 'Simple Auth'
       summary: 'Register new user'
       operationId: register
       parameters:
@@ -233,7 +233,7 @@ paths:
   /logout:
     post:
       tags:
-        - Auth
+        - 'Simple Auth'
       summary: 'Revokes current access token'
       operationId: logout
       responses:
@@ -249,7 +249,7 @@ paths:
   /me:
     get:
       tags:
-        - Auth
+        - 'Simple Auth'
       summary: 'Shows info about logged in user'
       operationId: me
       responses:
